personal appropration in ch. 6

--- a/_posts/thesis_chapters/2025-3-5-Design.md
+++ b/_posts/thesis_chapters/2025-3-5-Design.md
@@ -8,7 +8,7 @@ zotero:
 layout: post
 number-sections: true
 categories: chapter
-title: 5. Findings: Design Narrative
+title: 5. Findings - Design Narrative
 ---
 -   [Exploration of the Formative Learning Design
     Process](#exploration-of-the-formative-learning-design-process)
@@ -188,7 +188,10 @@ One benefit of analysing at this smaller scope is that it allows for a detailed 
 WHEN TO INTRODUCE GERM CELL?
 The significance of activity at this scope is reflected in my proposal of the implementation of GDPs as a germ cell concept within the theoretical framework of this thesis. A more granular exploration of this scope of activity helps explore both the developmental and analytical aspects of the germ cell concept. The object of activity at this level is less complex, as the primary motivation is to implement or alter a design pattern in the participant’s game on a pair or individual level and therefore incorporates less cultural and social factors.
 
-THIS COULD INCLUDE AN EXTRACT OF VIGNETTE 1 - EDITED DOWN. GIVING AN OVERVIEW OF TOOLS IN USE AND SOME SOCIAL ELEMENTS. SCREEN SHOTS COULD BE FULL SCREEN, AND DESCRIPTIVE ELEMENTS INLINE - THEN SOME TABLE OF INTERACTION / GESTURE ETC.
+INCLUDE AN EXTRACT OF VIGNETTE 1 - EDITED DOWN.
+
+GIVING AN OVERVIEW OF TOOLS IN USE AND SOME SOCIAL ELEMENTS. SCREEN SHOTS COULD BE FULL SCREEN, AND DESCRIPTIVE ELEMENTS INLINE
+THEN SOME TABLE OF INTERACTION / GESTURE ETC.
 
 In the course of the vignette, Toby uses a variety of tools to achieve this goal: a web-based coding tool (code playground), a game template that serves as the base for his game project, and a menu of documentation linking to code examples and tutorials. Implementing more complicated gameplay design patterns (GDPs) involved several stages and varied tools, which can be viewed as sub-actions contributing to the broader goal of applying a GDP. Using the terminology of Leontiev [-@leontiev_activity_2009], Toby can be seen undertaking chains of processes in a fluid way, indicating that these actions had become operations. The commentary in Vignette 5.toby provides a more detailed description of this process.
 
