--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -8,20 +8,17 @@ zotero:
 layout: post
 number-sections: true
 categories: chapter
-title:  6. Findings: Game Design Patterns
+title:  6. Findings - Game Design Patterns
 ---
--   [The Use of Gameplay Design Patterns "It's like a project in itself,
-    really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really)
-    -   [Research Questions March 2025](#research-questions-march-2025)
-    -   [Research Questions - March
-        2024](#research-questions---march-2024)
+
+-   [Findings: Game Design Patterns](#findings-game-design-patterns)
+    -   [Research Questions April 2025](#research-questions-april-2025)
     -   [Introduction](#introduction)
     -   [The role of GDPs in the personal appropriation of concepts and
         processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes)
-        -   [On learning map.](#on-learning-map.)
         -   [The interrelationship of GDPs and the development of
-            technical
-            processes](#the-interrelationship-of-gdps-and-the-development-of-technical-processes)
+            personal appropriation of skills and
+            processes](#the-interrelationship-of-gdps-and-the-development-of-personal-appropriation-of-skills-and-processes)
     -   [GDPs used in the process of guided
         participation](#gdps-used-in-the-process-of-guided-participation)
         -   [Use of a menu of GDPs to assist project navigation and
@@ -31,9 +28,8 @@ title:  6. Findings: Game Design Patterns
             processes](#gdps-used-to-scaffold-ideation-and-prioritisation-processes)
         -   [GDPs aiding the process of division of labour
             (1400)](#gdps-aiding-the-process-of-division-of-labour-1400)
-        -   [Discussion of GP- Flexible Navigation/ not aligning with
-            design
-            cycles](#discussion-of-gp--flexible-navigation-not-aligning-with-design-cycles)
+        -   [Discussion of GDPs not aligning with design
+            cycles](#discussion-of-gdps-not-aligning-with-design-cycles)
     -   [Use of GDPs in the cultural plane / community level of
         activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
         -   [The role of GDPs to facilitate learners to design for
@@ -46,14 +42,12 @@ title:  6. Findings: Game Design Patterns
                 evolving
                 idioculture](#gdps-as-components-of-emerging-repertoires-in-an-evolving-idioculture)
     -   [Discussion](#discussion)
-        -   [Expanded object in terms of motivation - fluency towards
-            agency](#expanded-object-in-terms-of-motivation---fluency-towards-agency)
-        -   [Link section - MERGE THIS WITH THE
-            ABOVE.](#link-section---merge-this-with-the-above.)
         -   [Addressing the use of GDPs in relation to theoretical
             understandings of processes of mediation and expanded
             objects of activity
             -](#addressing-the-use-of-gdps-in-relation-to-theoretical-understandings-of-processes-of-mediation-and-expanded-objects-of-activity--)
+        -   [Expanded object in terms of motivation - fluency towards
+            agency](#expanded-object-in-terms-of-motivation---fluency-towards-agency)
     -   [Conclusion](#conclusion)
     -   [MOVED FROM INTRODUCTION](#moved-from-introduction)
         -   [MOVED FROM GUIDED
@@ -96,8 +90,6 @@ title:  6. Findings: Game Design Patterns
 2. How does CHAT theory help us understand how game design patterns x  can be used in an evolving community of novice game makers?
 3. How can learners build agency in an evolving community of game makers? -->
 
-
-
 <!--
 **Newer notes**
 
@@ -131,8 +123,20 @@ https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/
 
 Software design patterns are a grouping of a description of target project behaviour, with a suggested community solution of code structure often accompanied with worked examples (see Chapter 2). While existing research explores the use of game design patterns in educational settings, for instance to aid the transfer of science simulation concepts to other contexts [@repenning_scalable_2015; @basawapatna_using_2010] or as a foundation for co-design work [@eriksson_using_2019], there is limited work addressing their role in overcoming challenges faced by emerging communities of game creators using text coding. In the previous chapter, I outlined the evolution of tool use, emphasising emerging tensions in activity. The importance of gameplay design patterns (GDPs) emerged from participant input in P1 and were then integrated by myself into various forms of scaffolding within and graded step of practice including: quick-start activities, instructional tutorials, and code snippet examples. This chapter shifts focus to the perspectives of participants, using recorded data to interpret their varied uses and adaptations of GDP use. In doing so, it addresses the research question: How does CHAT theory help us understand how game design patterns can be used in an evolving community of novice game makers?  I describe the use of GDPs as diverse mediational strategies to overcome some of the tensions explored in the previous chapter, not only addressing the use of facilitator-provided resources but also as part of emerging community practices and interpersonal repertoires.
 
+Outer pipes Cell padding
 
-INSERT SUMMARY TABLE HERE (From start of Vignettes document)
+| **GDP usage in game making**               | **Description (using CHAT concepts)**                                 |
+| ------------------------------------------ | --------------------------------------------------------------------- |
+| Personal appropriation:                    | GDPs used in appropriation of personal knowledge.                     |
+| Guided Participation / Interpersonal focus | GDPs as a framework for supporting resources and navigation|
+|    | GDPs used to scaffold ideation and prioritisation processes    |
+|                                            | GDPs used to aid the process of division of labour
+          |
+| Cultural activity focus          | GDPs can encourage learners to design for others|
+|                                            | GDPs facilitate the use of wider funds of knowledge (FoK)|
+|                                            | GDPs are propagated into the community through playtesting            |
+|                                            | GDPs as components of emerging repertoires in an evolving idioculture |
+
 
 Table 6.1: Summary of varied GDP use within the activity of this research
 
@@ -220,23 +224,36 @@ PULL OUT AN EXAMPLE -->
 
 ## The role of GDPs in the personal appropriation of concepts and processes
 
-THIS NEEDS REWRITING - THERE IS PERSONAL APPROPRIATION - BUT NOT NECESSARILY ALIGNED WITH CURRICULUM.
-
 <!-- As such, the design of this study does not fully address the exploration of the personal appropriation plane of activity.  -->
 
 <!-- In a classroom setting, group activity would likely incorporate a structural motivation to understand and utilise knowledge related to computational thinking concepts or similar curricular content.   -->
-Rogoff's interpretation of personal appropriation is complex communicating the bi-directional nature of the process where individual interpretations of community gained knowledge is remediated and fed back into the community. To avoid duplication with community processes and given the overall focus on social and cultural domains in thesis given the deficit in this aspect compared to studies exploring , this section follows the framing of Kafai and Burke's [-@kafai_constructionist_2015, p.4] review of CGD&P  as "knowledge appropriation and transformation that is instantiated in the process of making games". While in this informal learning context, the overall motivation of participant had a greater alignment with making an engaging game compared to learning knowledge within the computing curriculum. Despite this, the evolving design process resulted in activities which did allow the exploration of computational thinking, systems concepts and other computing concepts.
 
-Kafai and Burke's review [-@kafai_constructionist_2015] in its identification of the greater number of studies focus on personal dimensions of learning programming and curricular knowledge compared to the deficit regarding social and cultural aspects, justifies my approach of explore this dimension in less depth. I focus on a limited aspect of personal appropriation in this section to observable novel skills: namely the code patching, debugging and the development of digital literacy skills.
-WHY THIS?
+<!-- To avoid duplication with community processes and given the overall focus on social and cultural domains in thesis given the deficit in this aspect compared to studies exploring , this section follows -->
+
+Personal appropriation is described in of Kafai and Burke's [-@kafai_constructionist_2015, p.4] review of CGD&P  as "knowledge appropriation and transformation that is instantiated in the process of making games". Rogoff's interpretation of personal appropriation is more complex communicating the bi-directional nature of the process where individual interpretations of community gained knowledge is remediated and fed back into the community. In this informal learning context, the overall motivation of participants was on making an engaging game rather than explicitly developing to knowledge linked to the computing curriculum. Despite this, the evolving design process resulted in activities which did allow the exploration of computational thinking, systems concepts and other computing concepts and proceedures.
+
+Kafai and Burke's review [-@kafai_constructionist_2015] notes the greater number of studies focus on personal dimensions of learning programming and curricular knowledge compared to the deficit regarding social and cultural aspects. To reflect the greater coverage of this area of research, this section is focused on limited aspects of personal appropriation: namely the code patching, debugging and the development of digital literacy skills. I have chose these areas as there were a subject of several observations provoked by the characteristics of the learning design of this research.
 
 <!-- Specifically there was no testing involved and the interview focus was on socio-cultural aspects.  -->
 
 <!-- In P4 aGiven the potential to adapt this learning design to a more formal environment to address the needs outlined in the introductory chapter, from P2 onwards I began to augment the learning design to suit curriculum-oriented teaching and assessment of computational thinking concepts and skills,  -->
 
-I am inspired by the the process and rationale of Bevan and Petrich's [-@bevan_learning_2015; -@petrich_it_2013] work to create a map of learning dimensions to a seemingly chaotic tinkering and making process in museum contexts. As such, during early data analysis, with the potential to adapt this learning design to a more formal environment in mind, I mapped out curriculum-oriented concepts that suited exploration via  in the game making process of this research. This process resulted in a learning map of curricular concepts included here as Table 6.x. For brief definitions of these terms see the Glossary of this thesis.
+I was inspired by the the process and rationale of Bevan and Petrich's [-@bevan_learning_2015; -@petrich_it_2013] work who created a map of learning dimensions to a seemingly chaotic tinkering and making process in museum contexts. As such, during early data analysis, with the potential to adapt this learning design to a more formal environment in mind, I mapped out curriculum-oriented concepts that suited exploration via  in the game making process of this research. This process resulted in a learning map of curricular concepts included here as Table 6.x. For brief definitions of these terms see the Glossary of this thesis.
 
 
+| Computational Thinking  | Coding Concepts    | Systems Patterns    | Design and Technical Practices|
+|--------------|--------------|-----------|------------|
+| Abstraction | Sequences | Systems Elements      | Goal Setting        |
+| Decomposition | Variables      | Systems Dynamics  | Being Incremental and Iterative       |
+| Pattern Recognition | Logic | Reinforcing Feedback Loops      | Developing Vocabulary        |
+| Algorithmic Thinking | Loops | Balancing Feedback Loops      | Web Literacy    |
+|  | Arrays |       | Code patching       |
+| | Creating Functions |       | Version Control    |
+| | Change Listener |    | Debugging   |
+| | Input Event |   | Reusing and Remixing      |
+
+Table 6.x. Learning dimensions facilitated by this study's game making process
+<!--
 |      Coding Concepts    | Systems Patterns    | Design Practices|
 |--------------|-----------|------------|
 | Sequences | Systems Elements      | Goal Setting        |
@@ -248,20 +265,12 @@ I am inspired by the the process and rationale of Bevan and Petrich's [-@bevan_l
 | Change Listener |    | Debugging   |
 | Input Event |   | Reusing and Remixing      |
 
-Table 6.x. Learning Dimensions of the 3M Game Making Model
+Table 6.x. Learning Dimensions of the 3M Game Making Model -->
 
 <!-- NOTE - this map focuses on more concrete concepts,  -->
 
 
-Appendix.learningmap explores in more detail the evolution of this map. A summary here follows.
-
-- The map balances skills, concrete aspects of coding concepts and syntax, it excludes abstract definition of CT, but includes similarly abstract systems concepts.
-- It aims to address tensions in the integration of concepts into an informal context, specifically, a tension or paradox [cite] common in project-based approaches in more formal settings, between the an exploratory learning approach and a possibility or need to align with curricular concepts.
-
-PLAY PARADOX - DEVELOP  
-I propose that this play paradox is addressed by orienting the leading/motivational activity of the learning design to be one aligned with the underlying goals of the participants. In this case to add features to their game.
-AS ALIGNED WITH AVOIDING PRINCIPLES FIRST APPROACH IN SGD.
-
+The map of learning dimensions above includes a balance of skills, concrete and more abstract aspects of coding concepts (Appendix.learningmap explores in more detail the evolution of this map). It aims to address tensions in the integration of concepts into an informal context, specifically, a tension or paradox common in project-based approaches in more formal settings, between the an exploratory learning approach and a possibility or need to align with curricular concepts [@hoyles_pedagogy_1992]. I propose that the play paradox [@hoyles_pedagogy_1992] is addressed by orienting the leading/motivational activity of the learning design to be one aligned with the underlying goals of the participants. In this case to add features to their game. I return to this subject in Chapter 7.
 
 <!-- RETURN TO THIS TO REPRESENT SOME OF THE CHALLENGES AND DIFFICULTY OF SWIMMING AGAINST THE STREAM IN TERMS OF COMMODIFICIATION OF TOOLS -->
 
@@ -276,31 +285,53 @@ A summary of a book chapter [@chesterman_game_2023] exploring these issues with 
 
 ### The interrelationship of GDPs and the development of personal appropriation of skills and processes
 
-While the above learning map is relevant to the overall process of game making. The main focus of this chapter is the exploration of diverse uses of GDPs within this activity, as such I now explore the motivational and mediational uses of GDPs in this personal plane. The implementation of GDPs can encourage participants to adopt or share technical processes in various ways. These processes were sometimes introduced in a basic form through scaffolded activities, supporting documentation, or informal interactions between peers. The following observations illustrate how introduced processes were adapted and modified by the community.
+It is of value to compare the observational process of creating the learning map to the more intentional, concept-driven design approach described in research on Microworlds, which foregrounds the role of learning designers in shaping the affordances of (playful) learning environments to steer learners toward exploring curricular concepts.  In much of the Microworlds research, these are often scientific or mathematical concepts: take, for example, geometry in Turtle computing with the LOGO language [@ernest_whats_1988]. This design has used several structural constructionist techniques involved in designing Microworlds [@laurillard2020significance], however, as the principal motivation of this study is acculturation within a game-making community, my focus has prioritised procedural skills that facilitate community participation over underlying subject related concepts. Due to limited scope of this section I prioritise an analysis here of the technical practices of web literacy,code patching and debugging. In addition to the use of new techniques being  driven by the implementation of GDPs, the following observations reveal a complex, interdependent relationship between GDP concepts and emergent technical processes.
 
+<!-- While the above learning map is relevant to the overall process of game making. The main focus of this chapter is the exploration of diverse uses of GDPs within this activity, as such I now explore the motivational and mediational uses of GDPs in this personal plane.  -->
+<!-- These processes were sometimes introduced in a basic form through scaffolded activities, supporting documentation, or informal interactions between peers. The following observations illustrate how introduced processes were adapted and modified by the community. -->
+<!-- In line with Rogoff's understanding of personal appropriation as a bi-directional process, where the appropriation of personal knowledge is shaped by and contributes to a broader sociocultural context, participants actively contributed their interpretations of knowledge back into the communities they belonged to. -->
+Addressing digital and web literacies first, to integrate new gameplay design patterns or adapt existing ones in their games, participants needed to develop not only technical processes associated with computer coding, as well as foundational digital skills related to using a desktop personal computer and use of internet browser and online tool ( see Chapter 1 and  Appendix.digitalliteracy). most participants demonstrated increased fluency in these digital and web literacies, particularly in areas such as browser tab use, creating, uploading, and integrating graphical and audio assets, and proficiency in keyboard and mouse use for text manipulation. In line with CHAT theory, this can be interpreted as the gradual operationalisation of actions that initially required more explicit guidance, as discussed by Leontiev [@leontiev_activity_2009].
 
+In this process, GDPs functioned as both a motivational and conceptual tools facilitating interpersonal knowledge exchange, as explored in the following example. In Vignette 5 (sections V5.a and V5.c), Madiha(p) seeks assistance from her daughter Nasrin to format and export graphical files for use in the game code project. In this section Madiha has just finished created a pixel art sprite of an alien in the Piskel graphical web app but is unsure of how to transfer the image from Piskel into the glitch coding environment, and and make the relevant coding changes to place the imported asset into her game.
+
+    Madiha(p): We’re finished. Right what’s next? Now I’m an expert pixel? Now I have to figure out how to get it in there don’t I? Without losing it I’ll be very upset.
+
+    Sonia(p): Have you saved it?
+    Madiha(p):– No I’ve not saved it.
+    Sonia(p):– Save there. (points to relevant button on screen)
+    ...
+    Madiha(p): Nasrin! Nasrin! Nasrin!
+    Madiha(p): Do you know how to get it in the game?
+    Nasrin(c): Oh my god!
+
+    Madiha(p): Well . First of all save it to the gallery. How do you save it? Ah there you are. Save it. Is it saved? Right now export it.
+
+    Nasrin(c): Do you even know what export means?
+    Madiha(p): I know what export means!
+    Nasrin(c): Ok then smartie pants.
+
+The implementation of Madiha(p) chosen GDPs drives the development of these technical processes, as she must either learn them herself or draw on peer knowledge to complete the task. She is clearly invested in her creative products, so much so that a fellow parent highlights out the process to saving images.
+
+In another example, changing pen colours in the graphical tool is a process that Nasrin(c) has already internalised and performs effortlessly, whereas Madiha(p) is still deliberately working to build her competency. Nasrin(p) has fully operationalised the process, incorporating it into her repertoire of practices.
+
+<!-- Similarly, in section V5.d, Madiha receives help from a peer, Ed, in using the cropping tool to remove redundant space at the edges of sprite characters after he playtests her game. -->
 
 **Code Patching as a guided technical process and the use of GDPs to nurture tactical responses to coding errors**
 
-Turning to the practice of code patching, a guided technical process designed to scaffold the coding process (see Glossary and Chapter 2), video evidence and observational journal notes highlight the potential of coupling code implementation with target behaviour, structured within a framework of GDPs. This patching process became an important element of documentation. Although code was provided, mistakes occurred in practice and additional customisations were introduced. An example of code patching in practice can be seen in Toby's careful copying and pasting of different lines of code from supporting materials into his game project (see V1a and Appendix.patching).
-SEE ALSO PREVIOUS CHAPTER.
+GDPs also functioned a container for structured project stages, facilitating the initial use of procedures as illustrated in this section using the example of code patching. Code patching is a professional technical process to scaffold the application of new features in computer programming (see Glossary and Chapter 2). This patching process became an important element of documentation. Although code was provided, mistakes occurred in practice and additional customisations were introduced. Video evidence and observational journal notes highlight the potential of coupling code implementation with target behaviour, structured within a framework of GDPs. The following extract from Vignette 1 shows an example of code patching in practice.  This vignette extract is included to show both the technical process of code patching explored here and the process of accessing documentation covered in the following section on guided participation.
 
+INSERT SHORTER VIGNETTE HERE. ADD ONE WITH TIMED DETAIL
 
-Toby's success in using the code patching technique was supported by the UMC based structure of the game template in line with the UMC principles explored in the previous chapter and the high level of contextualisation provided by GDPs as a guiding framework in the learning design. This is illustrated in V1 when Toby alters the imported code producing a type of programming error I refer to as a glitch. This specific error occurs when the game continues to function but exhibits an unintended effect (see V1a). The glitch triggered an initial investigation prompted Toby to seek my assistance and required an iterative process of revision and cross-referencing with the original code snippet. From this and similar observations I propose that the tight coupling between code implementation and target behaviour in this case structured within GDPs scaffolds the debugging process and can be a valuable tool for facilitators.
+<!-- at the following location https://glitch.com/edit/#!/sgte-example-moving-enemy?path=js%2Fgame.js%3A1%3A0
 
-Additionally the key affordances of the learning design including the starting template code snippets and the resulting code patching process appear to encourage the creation of glitch errors. The data in this section is further supported by observations on the growing diversity of helping strategies in response to different types of errors discussed in Appendix Debugging. I also explain the patching process in greater depth to participants in an extract from Vignette 9 (V9a). In the commentary (V9b) I propose that noticing celebrating and exploring the sources of unintended behaviours may function as an inclusive strategy to mitigate the potentially frustrating process of debugging. Considering the bi-directional process aspects of personal appropriation can also be inferred from the interpersonal interactions explored in the following section.
+and the documentation is here
+https://3m.flossmanuals.net/#game-mechanic-add-moving-enemies
+-->
 
-**Digital / Web Literacy**
+Personal appropriation and increasing fluidity in terms of web literacies are well illustrated in Toby’s unaided incremental changes to level design, and the navigation of between code and game preview windows. By way of contrast his use of supporting documentation to undertake the code patching process is still hesitant and intentional. Toby's eventual success in using the code patching and debugging technique was supported by the high level of contextualisation provided by the structuring of the process around GDPs[^1]. As a facilitator (see Appendix.patching), I made explicit the path between choosing a pattern to work on and the mechanics of accessing documentation and the code patching process. In the vignette we can see that debugging motivated was facilitated by the participants strong understanding driven of what the desired GDP should provoke in the target behaviour of the games. The need to get both the starting and ending position of the movement of the imported enemy provokes several iterations of debugging.  
 
-Belshaw?
+The process of code patching process often provoked such glitches. Glitches are errors which allow the game to continues to function but which provoke an unintended effect (see Appendix Debugging). As a facilitator I mobilised participants existing knowledge of GDP behaviour to compare erroneous behaviour with desired behaviour  as an inclusive strategy to mitigate the potentially frustrating process of debugging.(Appendix Debugging)
 
-To integrate new gameplay design patterns or adapt existing ones in their games, participants needed to develop unfamiliar technical processes associated with computer coding, as well as foundational digital skills related to using a desktop personal computer. See Appendix: Digital Literacy for further details. One example of a skill developed by many participants was proficiency in keyboard and mouse use. Combined with the ability to navigate internet browser tabs, this facilitated movement between computer code, game prototypes, and supporting web-based documentation. Such personal appropriation and increasing fluidity are well illustrated in Toby’s repeated, solo, incremental changes to level design, as seen in Vignette 1.a. Most participants demonstrated increased fluency, particularly in areas such as creating, uploading, and integrating graphical assets, adjusting game challenges by modifying GDP elements, and engaging in coding processes such as debugging and code patching, which is explored in later sections. In line with CHAT theory, this can be interpreted as the gradual operationalisation of actions that initially required more explicit guidance, as discussed by Leontiev [@leontiev_activity_2009].
-
-While the use of new techniques was driven by the implementation of GDPs, the following observations reveal a complex, interdependent relationship between GDP concepts and emergent technical processes. In line with Rogoff's understanding of personal appropriation as a bi-directional process, where the appropriation of personal knowledge is shaped by and contributes to a broader sociocultural context, participants actively contributed their interpretations of knowledge back into the communities they belonged to.
-
-In this case, the community in question was the game-making community. In this process, GDPs functioned as both conceptual tools and structured project stages, facilitating interpersonal knowledge exchange, as explored in the following example. In Vignette 5 (sections V5.a and V5.c), Madiha(p) seeks assistance from her daughter Nasrin to format and export graphical files for use in the game code project. The implementation of her chosen GDPs drives the development of these technical processes, as she must either learn them herself or draw on peer knowledge to complete the task. For instance, changing pen colours in the graphical tool is a process that Nasrin has already internalised and performs effortlessly, whereas Madiha is still deliberately working to build her competency. Nasrin has fully operationalised the process, incorporating it into her repertoire of practices. Similarly, in section V5.d, Madiha receives help from a peer, Ed, in using the cropping tool to remove redundant space at the edges of sprite characters after he playtests her game.
-
-There is a cross over here with guided participation, and this aspect is explored in a later section on this chapter.
 
 
   <!-- Madiha also benefits, the expertise of her child to undertake that process is added to her distributed toolset. However, she is also keen to develop her own competency as indicated by her asking child to explain the process. -->
@@ -330,18 +361,9 @@ There is a cross over here with guided participation, and this aspect is explore
   <!-- NOTE - In vignette 4.a.5 -->
 
 
-A SORT OF CONCLUSION / LINK.
-
-It is of value to compare the observational process of creating the learning map to the more intentional, concept-driven design approach described in research on Microworlds, which foregrounds the role of learning designers in shaping the affordances of (playful) learning environments to steer learners toward exploring curricular concepts.  In much of the Microworlds research, these are often scientific or mathematical concepts: take, for example, geometry in Turtle computing with the LOGO language [@ernest_whats_1988].
-
-There are similarities between this design and the structural constructionist techniques involved in designing Microworlds [Laurillard], However, as the leading motivation of this study is the creation of and acculturation to a game-making community, the process can be seen differently.  Take code patching for an example, the design is oriented to support this practice which is taken on, however this is a procedural skill rather than more abstract knowledge. This is not to say future iterations of this design could not facilitate the exploration of abstract concepts more explicitly. For example, there is significant potential to explore systems thinking concepts (see appendix.map). Indeed, similar work using the Game Start Mechanic software takes such an approach.
-
-LINK ?
-
-
+<!-- This is not to say future iterations of this design could not facilitate the exploration of abstract concepts more explicitly. For example, there is significant potential to explore systems thinking concepts (see appendix.map). Indeed, similar work using the Game Start Mechanic software takes such an approach. -->
 
 <!-- NOTE Check is there  STILL material to  INTEGRATE FROM Appendix.debugging -->
-
 
 <!-- - Question - do more useful / less de-motivating errors result from remixing and game patching?
 - Question - what impact does the process of being driven by GDPs have on how users deal with errors?
@@ -546,10 +568,10 @@ The variety of repertoires of helping practice depends in part on the different 
 Madiha - How did you do that so quickly? I’ve got to like, carefully... (makes hand gestures to show a sense of hesitant keyboard use)
 Parent peer laughs
 Nasrin bounces up in place and smiles broadly.
-Madiha: Thanks
-Madiha: So am I like back with the black now?
+Madiha(p): Thanks
+Madiha(p): So am I like back with the black now?
 Nasrin : Yeah but if you want to delete it just press X (which switches between foreground and background colours) and then do it.
-Madiha: Oh X. Alright Bubs. Thanks. -->
+Madiha(p): Oh X. Alright Bubs. Thanks. -->
 
 <!-- NOTE - this is a secondary examples - where GDPs as a concept are not vital. -->
 
@@ -1317,3 +1339,5 @@ Returning to issues of inclusive approaches to pedagogy, the findings of this ch
 In many of the outlined uses of GDPs in chapter we can see processes at play that help bridge shifts in goals between activity systems and navigation between one sub-goal and the next. Any other analysis on the part of the participant can wait until the process becomes more familiar.
 
 This approach is aligned to inductive research processes. Finding useful abstractions only after immersing ones-self in the detail. Previously abstract concepts or processes become concrete through familiarisation via direct use and indirect observations through community participation.
+
+[^1]: https://3m.flossmanuals.net/#game-mechanic-add-moving-enemies
