--- a/_posts/thesis_chapters/tocs/2025-3-5-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-3-5-Design.md_toc.md
@@ -1,5 +1,4 @@
--   [Exploration of the Formative Learning Design
-    Process](#exploration-of-the-formative-learning-design-process)
+-   [Findings: Design Narrative](#findings-design-narrative)
     -   [Research Questions April 2025](#research-questions-april-2025)
     -   [Additional information to help
         reviewers](#additional-information-to-help-reviewers)
