--- a/_posts/thesis_chapters/tocs/2025-3-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-3-6-Gdps.md_toc.md
@@ -1,5 +1,4 @@
--   [The Use of Gameplay Design Patterns "It's like a project in itself,
-    really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really)
+-   [Findings: Game Design Patterns](#findings-game-design-patterns)
     -   [Research Questions April 2025](#research-questions-april-2025)
     -   [Introduction](#introduction)
     -   [The role of GDPs in the personal appropriation of concepts and
