--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -320,7 +320,7 @@ In another example, changing pen colours in the graphical tool is a process that
 
 GDPs also functioned a container for structured project stages, facilitating the initial use of procedures as illustrated in this section using the example of code patching. Code patching is a professional technical process to scaffold the application of new features in computer programming (see Glossary and Chapter 2). This patching process became an important element of documentation. Although code was provided, mistakes occurred in practice and additional customisations were introduced. Video evidence and observational journal notes highlight the potential of coupling code implementation with target behaviour, structured within a framework of GDPs. The following extract from Vignette 1 shows an example of code patching in practice.  This vignette extract is included to show both the technical process of code patching explored here and the process of accessing documentation covered in the following section on guided participation.
 
-INSERT SHORTER VIGNETTE HERE. ADD ONE WITH TIMED DETAIL
+INSERT SHORTER VIGNETTE HERE. ADD ONE WITH TIMED DETAIL?
 
 <!-- at the following location https://glitch.com/edit/#!/sgte-example-moving-enemy?path=js%2Fgame.js%3A1%3A0
 
@@ -401,7 +401,13 @@ As previously explored I had a reluctance to shift learners away from the practi
 ## GDPs used in the process of guided participation
 
 
-This section examines data on the use of GDPs from the perspective of interpersonal interaction. Here, the process of being guided into planned activities or peer collaboration is exploratory, contributing to interpersonal processes that facilitate the completion of tasks. As outlined in the previous section, personal understandings of knowledge can be observed within these interpersonal interactions, particularly in exchanges between parents and children. Based on observations of video data, I describe how GDPs are employed in diverse mediational strategies. I focus on three key categories of interaction that incorporate GDPs: the use of a provided menu of GDPs and supporting documentation, the role of GDPs in project ideation and prioritisation, and their function within the division of labour.
+This section examines data on the use of GDPs from the perspective of interpersonal interaction. Here, the process of being guided into planned activities or peer collaboration is exploratory, contributing to interpersonal processes that facilitate the completion of tasks. As outlined in the previous section, personal understandings of knowledge can be observed within these interpersonal interactions, particularly in exchanges between parents and children. Based on observations of video data, I describe how GDPs are employed in diverse mediational strategies.
+
+UPDATE THIS
+I focus on three key categories of interaction that incorporate GDPs: the use of a provided menu of GDPs and supporting documentation, the role of GDPs in project ideation and prioritisation, and their function within the division of labour.
+
+NOTE - MENTION THE MENU GUIDED BY  ME - THUS MY INPUT INTO GUIDED PARTICIPATION .
+
 
 <!-- In particular how , ideation, division of labour and prioritisation, and the adoption of technical processes intersect with the use of GDPs. -->
 
@@ -411,7 +417,7 @@ NOTE THIS HAS BEEN REMOVED
 This section examines the use of GDPs to facilitate guided participation via interpersonal interactions in game making. Guided participation in this context involved, guidance on organising design activities, various forms of problem solving and help to shift design perspectives. While the primary source of material is from pair interactions between children and parents, at times peer interaction between non-pairs developed into guidance. For example, in the in the example above where Toby provides assistance for Bertie  in adding levels to his game
 . -->
 
-### Use of a menu of GDPs to assist project navigation and resource organisation
+### Use of a menu of GDPs to assist project navigation and use of documentation
 
 <!-- DRAW ON CHAPTER 4 MUTUAL EVOLUTION - AND FIND EXAMPLES . -->
 <!-- - RECAP DOCUMENTATION TENSIONS HERE WITH FOCUS ON AGENCY
@@ -419,23 +425,25 @@ This section examines the use of GDPs to facilitate guided participation via int
 
 <!-- However, not all participants used the provided instructions and developed diverse methods to access support for implementing patterns (IS THIS PART NEEDED?). -->
 
-Chapter 5 introduced my provision of a curated collection (menu) of gameplay design patterns to address the tension between participants' choice and the need for documentation to support the technical implementation of code structures. Appendix.themeing outlines the evolution of how the sub-categories of patterns developed and the rationale guiding them. In Vignete 9, I address the whole group, describing the webpage presenting the menu of GDPs as a hub to help choose project goals and locate tutorials and code examples. "It’s almost like this is our control panel. You decide what you want to do next and we jump off from there." In this section, I summarise data on the use of the menu of GDPs, focusing on interpersonal interactions.
+Chapter 5 introduced my provision of a curated collection (menu) of gameplay design patterns to address the tension between participants' choice and the need for documentation to support the technical implementation of code structures. In the vignette extract above Toby uses the graphical menu of patterns  to choose and implement a features. using supporting documentation. Later he is able to assisting others in adding the same GDPs to their games (see V1.b). The use of shorter, just-in-time tutorials here reduces barriers associated with more extensive instruction-based approaches, particularly those related to literacy [@dietz_design_2021; @resnick_coding_2020]. In this section, I outline findings on the use of the menu of GDPs, focusing on interpersonal interactions.
 
-
+<!-- In Vignete 9, I address the whole group, describing the webpage presenting the menu of GDPs as a hub to help choose project goals and locate tutorials and code examples. "It’s almost like this is our control panel. You decide what you want to do next and we jump off from there." -->
 <!-- **tautology** Given the integration of these elements into the learning design from P2 onwards, it would seem natural that participants would use the provided framework, at least in some capacity. Despite this, the evolving use of this documentation, the variations in its use, and the interpersonal interactions surrounding it merit further attention due to the diversity, evolution, and fundamental importance of GDP use at this interpersonal scope. -->
 
-Toby, in Vignette 1 (see V1.8–V1.17), engages in independent work, copying code from a snippet example of the game design pattern he selected from a graphical menu of patterns. His ability to choose and implement new features using supporting documentation enables him to take on the role of a mentor, inspiring and assisting others in adding the same GDPs to their games (see V1.b). Toby's independence and effectiveness in this process align with existing concepts, including the use of shorter, just-in-time tutorials to reduce barriers associated with more extensive instruction-based approaches, particularly those related to literacy [@dietz_design_2021; @resnick_coding_2020].
 
-Vignette 2 (V2.a) observes parent Susanna (p)'s use of a tutorial to address the goal of implementing her child's chosen GDPs. Susanna, who is limited in her programming skills, leverages the concept of GDPs, particularly to access written step-by-step instructions to make progress. She prefers to avoid seeking facilitator help (see V2.b). The participants' choice over which GDPs they tackle can create a personal connection to these goals, a process that may help reduce feelings of alienation from coding or game-making culture (see Tehillah's positive reaction in V2.a and V11).  
+INSERT SHORTER VIGNETTE OF SUSANNA AND T HERE.
 
+Vignette 2 (V2.a) observes parent, indicated by (p), Susanna(p)'s use of a tutorial to address the goal of implementing her child's chosen GDPs. Susanna, who is limited in her programming skills but who avoiding seeking facilitator help (see V2.b), leverages the concept of GDPs, to independantly access written step-by-step instructions. Tehillah(c)'s choice over which GDPs they tackle has helped create a personal connection to the game, see Tehillah's positive reaction in the vignette above in her signing of the name of the key and door pattern.
+
+NOTES  - MAKE THE LINK CLEARER BETWEEN USE OF GDP AND POSITIVE AFFECT.
+V11 - WAS THE MAPS ONE-
 
 <!-- OTHER DATA  HERE - Other examples include,
 Examples from the data of participants using GDPs as a framework for organisation and project navigations. -->
 
-While the evidence supports the potential of a menu of GDPs to address the tensions between choice-based approaches and the danger of a lack of relevant scaffolding, there are some important clarifications to make at this point. Firstly, not all participants engage with this menu: a later section shows how GDPs picked up by one learner, via provided documentation (e.g., Toby), are propagated in other ways. For example, in Vignette 3 (V3.a), Ed cedes this aspect to his father in a way explored in the section below on division of labour. Secondly, there are potential issues concerning the validity of observations on the use of the GDP menu (and concepts) as navigational and organisational tools by participants, due to their nature as being introduced for that purpose. The danger here is of circular reasoning in methodology. At this early stage, this study acknowledges the potential of circular reasoning but observes the potential of GDP adoption and, in particular, the evolution of practices by participants. In addition, this process of using GDPs in this way was also discovered via an exploratory DBR approach, and thus its introduction is also significant and cannot be divorced from the aspect of participant reaction. Additionally, the potential of GDPs as a germ cell concept (as explored in Chapters 3 and 5) is explored in greater depth in the following chapter.
+While the evidence supports the potential of a menu of GDPs to address the tensions between choice-based approaches and the danger of a lack of relevant scaffolding, there are some important clarifications to make at this point. Firstly, not all participants engage with this menu. For example, in Vignette 3 (V3.a), Ed lets his father take the lead in accessing documentation. Other individuals lear to implement GDPs from peers, a process explored in later section. Secondly, becase the GDP menu (and concepts) were introduced by myself as navigational and organisational tool for use by participants, it seems logical that participant should use the for that purpose. The danger here is of circular reasoning in methodology which could impact the validity of claims here. Despite these clarification the data clearly shows the utility of the menu of GDP to directly help some participants, as a valid application of just in time documentation principles and as a foundational source later propagation and evolution of GDP practices by participants.
 
-
-
+<!-- In addition, this process of using GDPs in this way was also discovered via an exploratory DBR approach, and thus its introduction is also significant and cannot be divorced from the aspect of participant reaction. Additionally, the potential of GDPs as a germ cell concept (as explored in Chapters 3 and 5) is explored in greater depth in the following chapter. -->
 
 <!-- NOTE ARE DIFFERENT APPROACHES BEST EXPLORED HERE OR SOMEWHERE ELSE? -->
 
@@ -489,19 +497,15 @@ Ed: Yeah. I think I want to get an enemy in - oh no - my person animated.
 Mark: So you want to get your person animated that’s the main thing.
 Mark: Shall we concentrate on that and changing the platforms into something different? -->
 
-In Vignette 7 (see V7.a), home-based knowledge of GDP mechanics is utilised on an interpersonal plane, with Dan(p) helping Toby(c) via guided facilitation to provoke and shape new design ideas. Dan(p) draw on the game playing experiences to promote innovation in the design of the existing template: _"the previous style of game was a platform (makes shape with hands) game wasn't it? You went along and there was gravity pushing down. There are other types of games aren't there?"_ The pair use their knowledge of game play patterns and genre conventions to break out of the genre constraints of starting template.  Here they are charting new territory beyond the curated choices of GDPs and as such may not have vocabulary to express concepts. Both Dan and Toby make extensive use of gestures in their interaction reinforces their spoken references to GDP concepts.
-
-In the same vignette (see V7.12-16), Toby uses the code based tilemap tool to design a maze game instead of a platformer game drawing on existing knowledge of tools and home knowledge of the target game genre to rapidly make revisions without extensive planning. This use of GDPs to allow the spacial exploration of design in a visual and intuitive way suits being mapped onto paper, or onto graphical software which allows for a similarly rapid prototyping. By way of contrast, other pairs take advantage of paper prototyping (see Appendix.prototyping). For example, Susanna(p) notices the child's difficulty in using cursor and delete/backspace keys to edit a matrix allowing level design. The parent provides a book with grid paper to allow the child to replicate the matrix. The parent is then able to transcribe the design to the code example while engaging the child by checking she has interpreted the design correctly. The use of GDPs to support visual prototyping is also undertaken by Mark and Ed explored in more detail in Appendix.tech.prototyping
+In the vignette extract below, home-based knowledge of GDP mechanics is utilised on an interpersonal plane, with Dan(p) helping Toby(c) via guided facilitation to provoke and shape new design ideas. Dan(p) draw on the game playing experiences to promote innovation in the design of the existing template: _"the previous style of game was a platform (makes shape with hands) game wasn't it? You went along and there was gravity pushing down. There are other types of games aren't there?"_ The pair use their knowledge of game play patterns and genre conventions to break out of the genre constraints of starting template.  Here they are charting new territory beyond the curated choices of GDPs and as such may not have vocabulary to express concepts. Both Dan and Toby make extensive use of gestures in their interaction reinforces their spoken references to GDP concepts.
 
 
+INSERT DAN AND TOBY EXTRACT HERE.
+
+
+later in the same session (see V7.12-16), Toby uses the code based tilemap tool to design a maze game instead of a platformer game drawing on existing knowledge of tools and home knowledge of the target game genre to rapidly make revisions without extensive planning. This use of GDPs to allow the spacial exploration of design in a visual and intuitive way suits being mapped onto paper, or onto graphical software which allows for a similarly rapid prototyping. By way of contrast, other pairs take advantage of paper prototyping. For example, Susanna(p) notices the child's difficulty in using cursor and delete/backspace keys to edit a matrix allowing level design. The parent provides a book with grid paper to allow the child to replicate the matrix. The parent is then able to transcribe the design to the code example while engaging the child by checking she has interpreted the design correctly. Interview data with Mark and Ed uncovers complexities in the use of both digital and paper prototyping of related to GDPs explored in more detail in Appendix.tech.prototyping. WHY IMPORTANT?
 
 <!-- IS SOME SYNTHESIS NEEDED TO END THIS SECTION? -->
-
-To end this section, it is of value to link this use of GDP terminology and visual prototyping techniques to existing research on the development of shared language to support joint work and guided participation. While much research on teaching coding addresses the benefits of collaborative approaches (see Chapter 2), fewer studies outline strategies to facilitate such joint attention [@brennan_scratch-ed_2009]. The work of Stahl and others [@stahl_computer-supported_2006] within the fields of technology use and collaborative learning is relevant here to highlight the importance of language development and the intersubjective interpretation of visual prototypes and gestures as tools in building mutual understanding in the kind of _joint problem space_ we see in this study. Returning to Kynigos's interpretation of the half-baked game as a boundary object facilitating communication [@kynigos_half-baked_2007], we can locate the diverse forms of GDPs as such _boundary objects_ at a scope of greater granularity.
-
-
-
-
 
 <!--
 GET A BETTER SCREEN SHOT OF THE CHANGED DESIGN TOBY ETC IF NEEDED.
@@ -516,12 +520,6 @@ More on role of parent and child to negotiate approaches which maximise engageme
 Somethinkg about more direct link between code and output. - as with block coding - this is an intermediate step.
 -->
 
-
-<!-- NOTE
-
-The use of GDPs to scaffold the ideation process was a common pattern used by X of the Y sessions analysed. -->
-
-
 ### GDPs aiding the process of division of labour (1400)
 
 <!-- NOTE - DIVISION OF LABOUR IS IN THE NEXT CHAPTER TOO - REWRITE BASED ON GDP ONLY CONTENT
@@ -530,20 +528,26 @@ CHECK FOR OVERLAP-->
 <!-- NOTE  dol and identities.
 Skills to perform these activities were at often distributed between different family members. For some adult re-enforcing their identities as project managers, and for young participants forming identities as digital specialists.  -->
 
+Addressing division of labour on an interpersonal plane, participants worked mostly as pairs or individuals, alternating between community playtesting and pair/individual design work. An overarching feature of the use of GDPs at this level, in line with existing research on design patterns [@erickson_lingua_2000, @eriksson_using_2019], was a lingua franca. The use of GDP concepts to construct shared langage and understanding was found in video data in varied forms related in particular to division of labour between participants.
 
-Addressing division of labour on an interpersonal plane, participants worked mostly as pairs or individuals, alternating between community playtesting and pair/individual design work. Turning to the use of GDPs specifically in DoL as an organisational strategy, structuring work processes through implementing modular sub-projects in the form of GDPs can aid division of labour. GDPs feature in processes division of labour in a variety of ways: working knowledge of different types of GDPs can help participants to divide work by working on different patterns or taking on project elements within patterns.
+In addition, the use of GDPs as an organisational strategy, structuring work processes through implementing modular sub-projects in the form of GDPs can aid division of labour. GDPs feature in processes division of labour in a variety of ways: working knowledge of different types of GDPs can help participants to divide work by working on different patterns or taking on project elements within patterns.
 
-In Vignette 3 (V3.a), Mark(p) repeatedly steers his son Ed to pick one GDP for them to carefully work through the associated documentation together, a process he later refers to in interview data as _plodding_ . Early in that session Mark takes a significant amount of time puzzling over documentation on how to add animation to a character. This results in Ed being blocked from progressing and to address this tension child proposes dividing their labour and workig on two separate computer (see V3.9 _"Why don’t you go there for a computer and you can do that?"_). Ed appears to make a tactical decision allowing the father to specialise in GDPs that involve deciphering technical instructions, whilst he engages with a pattern that involves creating audio and graphical assets in a less technical, more exploratory process.
+The examples below illustrate part of some of the varied strategies to divide labour adopted by participants at times involving complex tensions in activity.
 
-While in this case, a decision was made to work side-by-side on the same game using different computers, data uncovered other ways in which the participant divided the process of game making, in ways which uncovered traces of home collaboration practices. For example, In Vignette 2, Susanna(p) and Tehillah(c) relied on the parent to do the majority of code implementation but shared one computer. The parent took a lead on many activities but took care that they alternated between use of keyboard and mouse to give the child hands on experience when possible, particularly in level design activities and playtesting (see V2.7). In interview data (see V2.b), the parent notes _"I resist the urge to fix things immediately when she struggles."_  In another exchange (see), Tehillah (c) uses the name of a GDP within a request for her parent to take on a specific task within their making process, "Go on then. Key-Door person." When the parent expresses confusion Tehillah gestures with her hands to indicate that her mother is the person she is referring to. The child appears to consider the level of complexity needed to add a new pattern into the code to be beyond her ability and thus directly delegate the task to her mother. At times Susanna(p) asked Tehillah(c) to seek help from facilitator (V2.1). On another occasion when the child appeared bored of waiting for parent to solve a code problem, she approached the facilitator to ask for help on behalf of the adult without prompting. At other times Tehillah(c) engages more peripheral activities such as watching older children playtest each others games, or observing community activity from under the table.
+Ddata uncovered  ways in which the participant divided the process of game making, in ways which uncovered traces of home collaboration practices. For example, In Vignette 2, Susanna(p) and Tehillah(c) relied on the parent to do the majority of code implementation but shared one computer. The parent took a lead on many activities but took care that they alternated between use of keyboard and mouse to give the child hands on experience when possible, particularly in level design activities and playtesting (see V2.7). In interview data (see V2.b), the parent notes _"I resist the urge to fix things immediately when she struggles."_  In another exchange (see), Tehillah (c) uses the name of a GDP within a request for her parent to take on a specific task within their making process, "Go on then. Key-Door person." When the parent expresses confusion Tehillah gestures with her hands to indicate that her mother is the person she is referring to. The child appears to consider the level of complexity needed to add a new pattern into the code to be beyond her ability and thus directly delegate the task to her mother. At times Susanna(p) asked Tehillah(c) to seek help from facilitator (V2.1). On another occasion when the child appeared bored of waiting for parent to solve a code problem, she approached the facilitator to ask for help on behalf of the adult without prompting. At other times Tehillah(c) engages more peripheral activities such as watching older children playtest each others games, or observing community activity from under the table.
 
 Madiha's(p) family Nasrin(c) and Zidane(c) are all working on separate games on different computers. While Madiha sits next to Zidane who needs closer support, Nasrin often sits close by but next to a friend. In Vignette 5, as part of her process of building an emerging identity as a graphical asset designer (see V5.b), Madiha calls across the room to draw on Nasrin's help to correct a design mistake. Nasrin affects reluctance in her support of her mother (see V5.a), but at other times shows that she enjoys her status of technical supporter (see V5.d). Nasrin appears reluctant to explain the technical processes she uses to help her mother:  
 *"Madiha (to Nasrin): What are you doing? You have to tell me what you are doing so I can do it myself."* This may be driven by a desire to preserve this specialist status and utility to her mother.
+
+Madiha and Nasrin reversed the traditional helping relationship, and the child would reluctantly implement the parent's requested technical elements of GDPs but would pointedly not explain the changes made, seemingly taking pride in knowing something that her mother didn't.
+
 
 
 <!-- (CHECK INTERVIEW DATA) -->
 
 <!-- Toby and Dan's pair process of accessing professional documentation also illustrated an aspect of their family learning culture.  -->
+
+
 
 Toby adopts different working arrangements dependent on which family members he attends with. While in P2 when supported by grandparents Toby had worked mostly alone (see V1), in P3, he works as a pair with his father (Dan) in closely guided practice (see V7.b). In several interchanges, the father starts as a facilitator, taking a lead from the direction of the child. As the child reaches the limits of their ability, he begins to be more directive, by asking leading questions and testing existing knowledge. Finally, in order to complete the programming or research tasks beyond the child's knowledge, the father is more direct in instruction, directing the research and proposing a coding solution for their new game design pattern. Dan's experience as a software engineer and volunteer at Coder Dojo (see glossary) is relevant as a fund of knowledge he draws on (see V7.a and later section).
 
@@ -551,16 +555,27 @@ Toby adopts different working arrangements dependent on which family members he 
 
 <!-- **Leveraging the possibilities of emerging divisions of labour** -->
 
-While the context of the participants as families involved in home education makes any general claims difficult, these observations support findings in other research in this domain. For example, research shows that children have the potential to help parents as technology brokers [@correa_brokering_2015]. In joint technology work, parents can fulfil several reciprocal roles including collaborator, resource provider, learner, non-technical consultant, and emotional support [@barron_parents_2009]. Thus, in response to the creative support that parents and siblings provide, facilitators should design learning environments to facilitate these possibilities. The work of Roque provides guidance for helpers in the process to support parents to value and feel confident in these roles [@roque_im_2016] in a way which mirrors the use of helpers in this phase of my study (see Chapter 4). While these examples involve GDPs, others are explored in relation to the development of agency in the following chapter. The examples above illustrate part of some of the varied strategies to divide labour adopted by participants at times involving complex tensions in activity. For example, Madiha and Nasrin reversed the traditional helping relationship, and the child would reluctantly implement the parent's requested technical elements of GDPs but would pointedly not explain the changes made, seemingly taking pride in knowing something that her mother didn't.
+While the context of the participants as families involved in home education makes any general claims difficult, these observations support findings in other research in this domain. For example, research shows that children have the potential to help parents as technology brokers [@correa_brokering_2015]. In joint technology work, parents can fulfil several reciprocal roles including collaborator, resource provider, learner, non-technical consultant, and emotional support [@barron_parents_2009].
+
+Thus, in response to the creative support that parents and siblings provide, facilitators should design learning environments to facilitate these possibilities. The work of Roque provides guidance for helpers in the process to support parents to value and feel confident in these roles [@roque_im_2016] in a way which mirrors the use of helpers in this phase of my study (see Chapter 4).
 
 
-Similarly, while Tehillah's activity away from the screen  while non-productive within the scope of technical progress, can be characterised as legitimate peripheral activity of observation of community activity [@lave_situating_1991 ; @rogoff_learning_2014].  Indeed the possibility for children to _not_ engage in community activities is seen by Rogoff [-@rogoff_cultural_2003; -@rogoff_organization_2016] as an important characteristics in participation based models of learning.
 
 
 
 
-The variety of repertoires of helping practice depends in part on the different funds of knowledge the parent has access to. Toby and Dan's pair process is more guided and focused than many other participants and includes accessing professional documentation and exploration of computational thinking concepts. While the helping pattern of researching and accessing technical documentation is available to all pairs, due to the level of skill and experience involved, other technical processes are developed by most participants and are explored in the next section.
+The variety of repertoires of helping practice depends in part on the different funds of knowledge the parent has access to. The helping pattern of researching and accessing technical documentation is not available to all pairs, due to the level of skill and experience involved
 
+Toby and Dan's pair process is more guided and focused than many other participants and includes accessing professional documentation and exploration of computational thinking concepts.
+
+
+
+While Tehillah's activity away from the screen  while non-productive within the scope of technical progress, can be characterised as legitimate peripheral activity of observation of community activity [@lave_situating_1991 ; @rogoff_learning_2014].  Indeed the possibility for children to _not_ engage in community activities is seen by Rogoff [-@rogoff_cultural_2003; -@rogoff_organization_2016] as an important characteristics in participation based models of learning.
+
+In Vignette 3 (V3.a), Mark(p) repeatedly steers Ed(c) to pick one GDP to allow them to carefully work through the associated documentation together, a process he later refers to in interview data (Interview ) as _plodding_ . Early in that session Mark takes a significant amount of time puzzling over documentation on how to add animation to a character. This results in Ed being blocked from progressing and to address this tension child proposes dividing their labour and workig on two separate computer (see V3.9 _"Why don’t you go there for a computer and you can do that?"_). Ed appears to make a tactical decision allowing the father to specialise in GDPs that involve deciphering technical instructions, whilst he engages with a pattern that involves creating audio and graphical assets in a less technical, more exploratory process.
+
+MOVED - INTEGRATE IN
+In Vignette 3 (see 3.c in particular), we see Ed(c) break out of the more restrictive approach of plodding that Mark(p) advocated for to engage in experimental, improvised design processes with no clear end goal. Mark (p) later joins in Ed(c)'s exploration of sound-making software. They start a process of tinkering and messing about with the capability of music-making tools in a way that spurs creativity. In this case, the joint improvised process sparks a new proposal to incorporate the two soundtracks they create in distinct levels.
 
 <!-- While these following observations are more generally inked to the overall design process rather than the specific note they are of value to RQ2 on developing agency. -->
 
@@ -600,16 +615,6 @@ Once the code for the new game mechanic has been added, the child is guided to t
  <!-- Structuring code implementation on relatively small code stages of GDP implementation steers the production process towards relatively frequent iterations of design cycle. Specifically the design stages here typically involve; ideation, planning, implementation, testing and modification and sharing via playtesting. THIS IS EXPLORED IN THE NEXT CHAPTER SO DROP OR ONLY BRIEFLY REFERENCE. -->
 
 
-
-### Discussion of GDPs not aligning with design cycles
-
-A possible existing framework on CGD&P to address the process of organising or scaffolding guided participation is that of design cycles. However, observations of participant design behaviour did not align with common design thinking concepts or advocated in design cycle frameworks [@resnick_all_2007; @winarno_steps_2020-1; @dam_5_2024]. The stages were instead fragmented and sometimes happened in parallel. In many interactions, I observed improvisational approaches which incorporated ideation, planning, implementation, and testing in the space of a minute or so. As typified in vignette 1 and 5, some younger participants, in particular, developed impressively fluid practices, demonstrating extremely rapid shifts between code editing, game testing, authoring assets in online tools, and migrating files, often while talking with peers. Some older participants also showed rapid, responsive creativity. Grandad Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting. If I had encouraged participants to follow prescribed design stages, this may have restricted this flexibility in practice [@kuby_rhizomatic_2016].
-
-In Vignette 4 (see 4.c in particular), we see Ed(c) break out of the more restrictive approach of plodding that Mark(p) advocated for to engage in experimental, improvised design processes with no clear end goal. Mark (p) later joins in Ed(c)'s exploration of sound-making software. They start a process of tinkering and messing about with the capability of music-making tools in a way that spurs creativity. In this case, the joint improvised process sparks a new proposal to incorporate the two soundtracks they create in distinct levels.  
-Other pairs often adopted a similar spirit of collaborative improvisation. In V7 Dan(p) makes a suggestion - "Use paper to design?" - to which Toby(c) replies, "I'm just going with it."
-
-These examples and many observations in this chapter show a variety of ways that GDPs assist  division of labour, and
-Thus, rather than design cycles a more flexible understanding is needed.
 
   <!-- from other activity systems are incorporated into new practices. -->
 
@@ -697,6 +702,9 @@ DVELOP THIS A BIT OR LINK TO ANOTHER BIT EXPLORING THIS
 
 ![Illustration 6.x -  MDA as an additional framework promoting multiple means of engagement - mapped to an grouping of GDPs  ](./Pictures/ch_6_mda_dia_2.png){width=95%}
 
+
+INTEGRATE
+Appendix.themeing outlines the evolution of how the sub-categories of patterns developed and the rationale guiding them in more detail.
 
 These findings align with existing constructivist research which highlight the motivating potential of incorporating home interests in games, coding and media projects [@resnick_mothers_2012; @papert_mindstorms:_1980]; @kafai_constructionist_2015, and socio-cultural research on the tactical use of FoK to overcome barriers to technical environments [@gutierrez_learning_2019-1; @moje2001maestro]. While existing work on computational design patterns by Repenning et al.  [@repenning_scalable_2015] addresses the value of progressive scaffolding to support the engagement of learners, it does not address any aspect of choice when of drawing on FoK when creating games.
 
@@ -824,6 +832,21 @@ Given the complexity of the expanded object and it would be unwieldy to try to r
 
 At the larger scale, (see Figure.5.x) the activity system of games code and process can be seen as a boundary objects. Additionally, each game instance, can also be interpreted as a boundary object for complex, and expanded interacting processes of activity. Take for example findings showing participant draw some of their home gaming knowledge of GDPs  in varied ways in the new setting including: goal formation, as a lingua franca in design processes, and to provide feedback in playtesting.
 
+PATCHED IN HERE - MERGE UP
+
+To end this section, it is of value to link this use of GDP terminology and visual prototyping techniques to existing research on the development of shared language to support joint work and guided participation. While much research on teaching coding addresses the benefits of collaborative approaches (see Chapter 2), fewer studies outline strategies to facilitate such joint attention [@brennan_scratch-ed_2009]. The work of Stahl and others [@stahl_computer-supported_2006] within the fields of technology use and collaborative learning is relevant here to highlight the importance of language development and the intersubjective interpretation of visual prototypes and gestures as tools in building mutual understanding in the kind of _joint problem space_ we see in this study. Returning to Kynigos's interpretation of the half-baked game as a boundary object facilitating communication [@kynigos_half-baked_2007], we can locate the diverse forms of GDPs as such _boundary objects_ at a scope of greater granularity.
+
+
+### Discussion of GDPs not aligning with design cycles MERGE WITH BELOW?
+
+A possible existing framework on CGD&P to address the process of organising or scaffolding guided participation is that of design cycles. However, observations of participant design behaviour did not align with common design thinking concepts or advocated in design cycle frameworks [@resnick_all_2007; @winarno_steps_2020-1; @dam_5_2024]. The stages were instead fragmented and sometimes happened in parallel. In many interactions, I observed improvisational approaches which incorporated ideation, planning, implementation, and testing in the space of a minute or so. As typified in vignette 1 and 5, some younger participants, in particular, developed impressively fluid practices, demonstrating extremely rapid shifts between code editing, game testing, authoring assets in online tools, and migrating files, often while talking with peers. Some older participants also showed rapid, responsive creativity. Grandad Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting. If I had encouraged participants to follow prescribed design stages, this may have restricted this flexibility in practice [@kuby_rhizomatic_2016].
+
+NOTE REFERENCE TO PLODDING MOVED
+
+Other pairs often adopted a similar spirit of collaborative improvisation. In V7 Dan(p) makes a suggestion - "Use paper to design?" - to which Toby(c) replies, "I'm just going with it."
+
+These examples and many observations in this chapter show a variety of ways that GDPs assist  division of labour, and
+Thus, rather than design cycles a more flexible understanding is needed.
 
 
 ### Expanded object in terms of motivation - fluency towards agency
